refactoring and bug fix for config reading

--- a/jamesui/src/main/resources/jamesui-devel.config
+++ b/jamesui/src/main/resources/jamesui-devel.config
@@ -1,10 +1,38 @@
 
 # Configuration file for JamesUi application used ONLY when the application is running inside Eclipse (ie: CATALINA_HOME is not set).
 # When JamesUI is running inside Apache Tomcat is used a file named jamesui.conf that the user MUST place in TOMCAT_HOME/conf folder.
-# The properties entry names are the sames for both the files 
 
-# put here the file system folder where save the Database files with James statistics
-statistic_db_location=C:\\Users\\james\\Desktop\\MY_DOC\\TEST
 
-# the folder where is installed Apache James server 
-james_base_folder=C:\\Users\\james\\Desktop\\MY_DOC\\JamesUI\\apache-james-3.0-beta4
+# update this entry with the file system folder where you want save the Database files with James statistics
+statistic_db_location=C:\\Users\\fulvio\\Desktop\\Personale\\progetti\\jamesui
+
+# update this entry with the folder where is installed Apache James server 
+james_base_folder=C:\\Users\\fulvio\\Desktop\\Personale\\progetti\\jamesui\\james-server-app-3.0.0-beta5-SNAPSHOT
+
+
+
+# The names of the james server templates configuration files (eg: dnsservice-template.conf) and the effective configuration files created from the template (eg: dnsservice.conf).
+# NOTE: The names of that files must be changed ONLY if James server devlopers will change that file names.
+# For example if in the future the imapserver configuration file become 'imap-conf.xml' instead of 'imapserver.xml' you must only update the entry value in this file.
+
+
+james_dns_config_template_file_name=dnsservice-template.xml
+james_dns_config_file_name=dnsservice.xml
+
+james_imap_config_template_file_name=imapserver-template.xml
+james_imap_config_file_name=imapserver.xml
+
+james_jmx_config_template_file_name=jmx-template.properties
+james_jmx_config_file_name=jmx.properties
+
+james_lmtp_config_template_file_name=lmtpserver-template.xml
+james_lmtp_config_file_name=lmtpserver.xml
+
+james_pop3_config_template_file_name=pop3server-template.xml
+james_pop3_config_file_name=pop3server.xml
+
+james_smtp_config_template_file_name=smtpserver-template.xml
+james_smtp_config_file_name=smtpserver.xml
+
+james_database_config_template_file_name=james-database-template.properties
+james_database_config_file_name=james-database.properties
